--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=springcommerce
+# --- K?t n?i MySQL ---
+spring.datasource.url=jdbc:mysql://localhost:3306/java-midterm?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.security.user.name=admin
+spring.security.user.password=admin123
+
+# --- JPA / Hibernate ---
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
+
+server.port=8080
+
+
